fix: scope hero image margin-top to unwrapped images only

--- a/css/style.css
+++ b/css/style.css
@@ -1268,6 +1268,9 @@ ul {
   display: block;
   width: 100%;
   height: auto;
+}
+
+.cs-hero > .container > .cs-hero__image {
   margin-top: 64px;
 }
 
